crates/riri-npd/tests/snapshots/cli_snapshots__cli_npd_fixture@npd-npm-v3-already-pinned.snap
---
source: crates/riri-npd/tests/cli_snapshots.rs
expression: snapshot
---
exit: 0
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing dependency pins...
  Computed dependency pins

  All dependencies are already pinned :)
