crates/riri-npd/tests/snapshots/cli_snapshots__cli_npd_fixture@npd-npm-v3-file-dependency.snap
---
source: crates/riri-npd/tests/cli_snapshots.rs
expression: snapshot
---
exit: 1
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing dependency pins...
  Computed dependency pins
  foo  ^4.17.21  →  4.17.21

  Run npd -v -u to upgrade package.json.
