crates/riri-npd/tests/snapshots/cli_snapshots__cli_npd_fixture@npd-npm-v3-unpinned-deps.snap
---
source: crates/riri-npd/tests/cli_snapshots.rs
expression: snapshot
---
exit: 1
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing dependency pins...
  Computed dependency pins
    bar  ~18.2.0   →  18.2.0
    foo  ^4.17.21  →  4.17.21
    baz  ^1.0.0    →  1.6.0

  Run npd -v -u to upgrade package.json.
