crates/riri-npd/tests/snapshots/cli_snapshots__cli_npd_fixture@npd-yarn-v1-scoped-packages.snap
---
source: crates/riri-npd/tests/cli_snapshots.rs
expression: snapshot
---
exit: 1
---
  Detecting lockfile...
  Detected yarn.lock
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing dependency pins...
  Computed dependency pins
    @scope/bar  ~18.2.0   →  18.2.0
    @scope/foo  ^4.17.21  →  4.17.21
    @other/baz  ^1.0.0    →  1.6.0

  Run npd -v -u to upgrade package.json.
