crates/riri-npd/tests/snapshots/cli_snapshots__unpinned_deps_json.snap
---
source: crates/riri-npd/tests/cli_snapshots.rs
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "pins": [
    {
      "name": "lodash",
      "kind": "dependencies",
      "from": "^4.17.21",
      "to": "4.17.21"
    },
    {
      "name": "react",
      "kind": "dependencies",
      "from": "~18.2.0",
      "to": "18.2.0"
    },
    {
      "name": "vitest",
      "kind": "devDependencies",
      "from": "^1.0.0",
      "to": "1.6.0"
    }
  ]
}
